TLTB-14 repository and fix service
